# op-energy

./: .gitmodules  README.md  default.nix  overlay-set.nix  shell.nix
.github/workflows/: dev-deploy.yml  op-energy.yml  test.yml
oe-account-service/op-energy-account-api/: DEVELOPMENT.md  derivation.nix  op-energy-account-api.cabal  overlay-set.nix  shell.nix
oe-account-service/op-energy-account-api/app/: Main.hs
oe-account-service/op-energy-account-api/src/Data/OpEnergy/Account/: API.hs
oe-account-service/op-energy-account-api/src/Data/OpEnergy/Account/API/: V1.hs  V2.hs
oe-account-service/op-energy-account-api/src/Data/OpEnergy/Account/API/V1/: Account.hs  BlockTimeStrike.hs  BlockTimeStrikeFilterClass.hs  BlockTimeStrikeGuess.hs  BlockTimeStrikeGuessResult.hs  BlockTimeStrikePublic.hs  Common.hs  FilterRequest.hs  Hash.hs  PagingResult.hs  SlowFast.hs  UUID.hs
oe-account-service/op-energy-account-api/src/Data/OpEnergy/BlockTime/API/: V2.hs
oe-account-service/op-energy-account-api/src/Data/OpEnergy/BlockTime/API/V2/: BlockSpanTimeStrike.hs  BlockSpanTimeStrikeGuess.hs  BlockSpanTimeStrikeGuessFilter.hs  BlockSpanTimeStrikeGuessesSummary.hs  GuessAPI.hs  GuessesAPI.hs  StrikeAPI.hs  StrikeGuessesAPI.hs  StrikesAPI.hs
oe-account-service/op-energy-account-service/: default.nix  derivation.nix  module-backend.nix  op-energy-account-service.cabal  op-energy-config.json  op-energy-mainnet.json  overlay-set.nix  shell.nix
oe-account-service/op-energy-account-service/app/: Main.hs
oe-account-service/op-energy-account-service/src/Data/Conduit/Extra/: Zip.hs
oe-account-service/op-energy-account-service/src/OpEnergy/: Error.hs  ExceptMaybe.hs  PagingResult.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/: Server.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/Server/: GitCommitHash.hs  V1.hs  V2.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/Server/V1/: AccountService.hs  Class.hs  Config.hs  DB.hs  Metrics.hs  Person.hs  WebSocketService.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/Server/V1/DB/: Migrations.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/Server/V1/WebSocketService/: Message.hs
oe-account-service/op-energy-account-service/src/OpEnergy/Account/Server/V2/: AccountService.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/: Server.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/: V1.hs  V2.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/: BlockTimeScheduledFutureStrikeCreation.hs  BlockTimeScheduledStrikeCreation.hs  BlockTimeStrike.hs  BlockTimeStrikeFilter.hs  BlockTimeStrikeGuess.hs  BlockTimeStrikeGuessService.hs  BlockTimeStrikeJudgement.hs  BlockTimeStrikeObserve.hs  BlockTimeStrikeService.hs  Class.hs  Context.hs  SlowFast.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/BlockTimeStrikeService/: GetBlockTimeStrikesPage.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/DB/Migrations/: BlockTimeStrikeToBlockSpanTimeStrike.hs  CalculateBlockTimeStrikeCalculateGuessesCount.hs  SplitBlockTimeStrikeObservedFromBlockTimeStrike.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/DB/Migrations/BlockTimeStrikeToBlockSpanTimeStrike/: ModelAfter.hs  ModelBefore.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/DB/Migrations/CalculateBlockTimeStrikeGuessesCount/: BlockTimeStrike.hs  BlockTimeStrikeGuess.hs  Migration.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/DB/Migrations/CalculateBlockTimeStrikeGuessesCountSlowFast/: BlockTimeStrike.hs  BlockTimeStrikeGuessAfter.hs  BlockTimeStrikeGuessBefore.hs  Migration.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V1/DB/Migrations/SplitBlockTimeStrikeObservedFromBlockTimeStrike/: Model.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/: BlockSpanTimeScheduledStrikeCreation.hs  BlockSpanTimeStrike.hs  BlockSpanTimeStrikeFilter.hs  BlockSpanTimeStrikeGuess.hs  BlockSpanTimeStrikeGuessService.hs  BlockSpanTimeStrikeJudgement.hs  BlockSpanTimeStrikeObserve.hs  BlockSpanTimeStrikeService.hs  DBModel.hs  GuessAPI.hs  StrikeAPI.hs  StrikeGuessesAPI.hs  StrikesAPI.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/BlockSpanTimeStrikeGuess/: BlockSpanTimeStrikeGuessFilter.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/BlockSpanTimeStrikeGuessService/: Create.hs  GetStrikesGuesses.hs  StrikeGuesses.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/BlockSpanTimeStrikeService/: Create.hs  GetStrikes.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/GuessAPI/: Create.hs  Get.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/StrikeAPI/: Create.hs  GetStrike.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/StrikeGuessesAPI/: Summary.hs
oe-account-service/op-energy-account-service/src/OpEnergy/BlockTimeStrike/Server/V2/StrikesAPI/: GetStrikes.hs  GetStrikesGuesses.hs
oe-account-service/op-energy-account-service/test/OpEnergy/BlockTimeStrike/Server/V1/: BlockTimeStrikeJudgementSpec.hs  BlockTimeStrikeSpec.hs
