cabal-version:      2.4
name:               op-energy-account-service
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files:
executable op-energy-account-service
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
                    , op-energy-account-service
                    , servant
                    , servant-server
                    , warp
                    , async
                    , text
                    , op-energy-account-api
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
                    , network
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:       OverloadedStrings
    ghc-options:    -O2 -threaded -rtsopts "-with-rtsopts=-T -N"

library
    hs-source-dirs: src
    exposed-modules: OpEnergy.Account.Server.V1
                   , OpEnergy.Account.Server.GitCommitHash
                   , OpEnergy.Account.Server
                   , OpEnergy.Account.Server.V1.Config
                   , OpEnergy.Account.Server.V1.DB
                   , OpEnergy.Account.Server.V1.DB.Migrations
                   , OpEnergy.Account.Server.V1.Class
                   , OpEnergy.Account.Server.V1.Metrics
                   , OpEnergy.Account.Server.V1.WebSocketService
                   , OpEnergy.Account.Server.V1.WebSocketService.Message
                   , OpEnergy.Account.Server.V1.AccountService
                   , OpEnergy.Account.Server.V1.Person
                   , OpEnergy.Account.Server.V2
                   , OpEnergy.Account.Server.V2.AccountService

                   , OpEnergy.BlockTimeStrike.Server
                   , OpEnergy.BlockTimeStrike.Server.V1
                   , OpEnergy.BlockTimeStrike.Server.V1.DB.Migrations.SplitBlockTimeStrikeObservedFromBlockTimeStrike
                   , OpEnergy.BlockTimeStrike.Server.V1.DB.Migrations.SplitBlockTimeStrikeObservedFromBlockTimeStrike.Model
                   , OpEnergy.BlockTimeStrike.Server.V1.DB.Migrations.CalculateBlockTimeStrikeGuessesCount.Migration
                   , OpEnergy.BlockTimeStrike.Server.V1.DB.Migrations.CalculateBlockTimeStrikeGuessesCount.BlockTimeStrike
                   , OpEnergy.BlockTimeStrike.Server.V1.DB.Migrations.CalculateBlockTimeStrikeGuessesCount.BlockTimeStrikeGuess
                   , OpEnergy.BlockTimeStrike.Server.V1.Class
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeService
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeService.GetBlockTimeStrikesPage
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeGuessService
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeScheduledStrikeCreation
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeJudgement
                   , OpEnergy.BlockTimeStrike.Server.V1.Context
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeObserve
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrike
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeGuess
                   , OpEnergy.BlockTimeStrike.Server.V1.SlowFast
                   , OpEnergy.BlockTimeStrike.Server.V1.BlockTimeStrikeFilter
                   , OpEnergy.BlockTimeStrike.Server.V2
                   , OpEnergy.BlockTimeStrike.Server.V2.StrikesAPI
                   , OpEnergy.BlockTimeStrike.Server.V2.StrikesAPI.GetStrikes
                   , OpEnergy.BlockTimeStrike.Server.V2.BlockSpanTimeStrike
                   , OpEnergy.BlockTimeStrike.Server.V2.StrikeAPI
                   , OpEnergy.BlockTimeStrike.Server.V2.StrikeAPI.GetStrike
                   , OpEnergy.BlockTimeStrike.Server.V2.StrikeAPI.Create

                   , Data.Text.Show
                   , Data.Conduit.Extra.Zip
                   , OpEnergy.Error
                   , OpEnergy.PagingResult
                   , OpEnergy.ExceptMaybe

    build-depends:    base ^>=4.15.1.0
                    , aeson
                    , aeson-pretty
                    , text
                    , bytestring
                    , containers
                    , servant
                    , servant-server, servant-client, servant-jsonrpc, servant-jsonrpc-client
                    , websockets, servant-websockets
                    , http-client
                    , servant-swagger
                    , swagger2
                    , time
                    , lens
                    , scientific
                    , persistent, persistent-template, persistent-postgresql, monad-logger
                    , persistent-pagination
                    , resource-pool
                    , random
                    , cryptohash-sha256
                    , base16-bytestring
                    , op-energy-api
                    , op-energy-account-api
                    , conduit
                    , resourcet
                    , exceptions
                    , safe-exceptions
                    , mtl
                    , stm, stm-chans
                    , transformers
                    , warp
                    , monad-logger
                    , prometheus-client
                    , wai-middleware-prometheus
                    , prometheus-metrics-ghc
                    , prometheus-proc
                    , async
                    , unliftio-core
                    , vector
                    , ghc-compact
                    , clientsession, base64-bytestring
    ghc-options:    -O2 -Wall -Werror -Wno-unticked-promoted-constructors -fno-warn-name-shadowing -Wno-orphans
    default-extensions:       OverloadedStrings
                            , ScopedTypeVariables
                            , BangPatterns

